--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         }
     ],
     "autoload": {
+        "psr-4": {
+            "Chaman\\FirstPackage\\" : "src"
+        },
         "files":["src/helpers.php"]
     },
     "minimum-stability": "stable",
